@@ -1,6 +1,0 @@
-#ifndef _DEVINFO_H
-#define _DEVINFO_H
-
-int get_lun_strings (char *, char *, char *, char *);
-
-#endif /* _DEVINFO_H */
