@@ -1,5 +1,12 @@
 2005-03-19 multipath-tools-0.4.4
 
+	* [libmultipath] Use "config->udev_dir + path->dev" as
+	  a path devnode to open instead of mknod'ing for each
+	  one. Fix some DoS issues regarding usage of /tmp in
+	  libmultipath/discovery.c:opennode(). Kill unlinknode()
+	* [multipathd] merged the redhat init script and stop
+	  installing one on "make install"
+	* [libmultipath] fold safe_sprintf.h into util.h
 	* [libmultipath] move blacklist to a real regex matcher
 	  Example config files updated : watch out yours !!
 	* [multipath] fix path group compare logic to not stop
